--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,11 +1,2 @@
-body {
-    color: green;
-}
-
-$mainBlue: #2f5572;
-
-div {
-    h2 {
-        color: $mainBlue;
-    }
-}
+@import 'normalize.css';
+@import 'base/_global.css';
