--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,5 @@
 @import 'normalize.css';
 @import 'base/_global';
+@import 'base/_variables';
 @import 'base/_mixins';
+@import 'modules/_call-to-action';
