--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -3,10 +3,10 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
     color: #fff;
     background-color: #5bbb00;
-    /* background: url('../images/bg-2.jpg');*/
+    background: url('/assets/images/Layer-7.jpg') top center no-repeat;
+    background-size: cover;
 }
 
 img {
