--- a/app/assets/styles/modules/_call-to-action.css
+++ b/app/assets/styles/modules/_call-to-action.css
@@ -1,22 +1,27 @@
 .call-to-action {
     
     &__headline {
+        font-family: 'Montserrat', sans-serif;
         text-transform: uppercase;
         font-size: 2.25rem;
         line-height: 1.4;
         font-weight: 700;
+        margin-bottom: 0.44em;
     }
     
-    &--bg-red {
+    &__headline--bg-red {
         background-color: $primaryRed;
         margin: 0;
         padding: 0.93rem 1.25rem;
+        box-decoration-break: clone;
     }
 
     &__description {
         font-family: 'Montserrat', sans-serif;
         font-size: 1.06rem;
         line-height: 1.25;
+        margin-bottom: 0.88em;
+        margin-left: 1em;
     }
 
     &__btn {
@@ -29,7 +34,7 @@
         color: #fff;
         display: inline-block;
         padding: 1.25rem 5rem;
-        background-color: $primaryRed;
+        background-color: #26ae39;
         box-sizing: border-box;
     }
 }
