--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,4 +2,8 @@
 @import 'base/_global';
 @import 'base/_variables';
 @import 'base/_mixins';
+@import 'modules/_wrapper';
+@import 'modules/_section';
+@import 'modules/_row';
 @import 'modules/_call-to-action';
+@import 'modules/_step';
