Added some initial styling for Level section

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
     color: #fff;
     background-color: #5bbb00;
     background: url('/assets/images/Layer-7.jpg') top center no-repeat;
