--- a/app/assets/styles/modules/_level.css
+++ b/app/assets/styles/modules/_level.css
@@ -1,8 +1,12 @@
 .level {
 
-    &__headline {
+    max-width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+
+    &__section-headline {
         font-size: 1.32rem;
-        font-weight: 500;
+        font-weight: 500;        
         text-align: center;
         margin-bottom: 1.43em;
     }
@@ -10,11 +14,57 @@
     &__indicator {
         background-color: $primaryRed;
         text-align: center;
-        font-size: 1.33rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        padding: 2rem 2.06rem 2rem;
+
+        &__heading {
+            font-size: 1.329rem;
+            margin-bottom: 0.89em;
+            display: block;    
+        }
+
+        &__digit {
+            font-size: 5.31rem;
+            margin: 0;
+        }
     }
 
     &__progress {
         background-color: #fff;
         color: #282c37;
+        padding: 1.43rem 2.68rem;
+
+        &__text {
+            font-size: 0.88rem;
+            font-weight: 500;
+            margin-bottom: 0;
+        }
+
+        &__description {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 1.25em;
+            
+            &__current {
+                flex: 1;
+                font-size: 1.329rem;
+                font-weight: 500;
+            }
+
+        }
+
+        &__bounds {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+
+            &__min-max {
+                flex: 1;
+                font-weight: 400;
+                font-size: 12.41px;
+            }
+        }
+
     }
 }
