--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -1,4 +1,6 @@
 .section {
-    padding-top: 5.375rem;
-    padding-bottom: 3.375rem;
+    @mixin atUltraWide {
+        padding-top: 5.375rem;
+        padding-bottom: 3.375rem;
+    }
 }
