--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #fff;
     background-color: #5bbb00;
-    background: url('/assets/images/Layer-7.jpg') top center no-repeat;
+    background: url('/assets/images/Layer-7.jpg') 60% 0 no-repeat;
     background-size: cover;
 }
 
