--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,5 +1,12 @@
 .wrapper {
-    max-width: 980px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+
+
+    @mixin atMedium {
+        max-width: 980px;    
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
 }
