--- a/app/assets/styles/modules/_level.css
+++ b/app/assets/styles/modules/_level.css
@@ -1,14 +1,21 @@
 .level {
 
-    max-width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+    @mixin atLarge {
+        max-width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     &__section-headline {
         font-size: 1.32rem;
         font-weight: 500;        
         text-align: center;
         margin-bottom: 1.43em;
+        margin-top: 2em;
+
+        @mixin atUltraWide {
+            margin-top: 0;
+        }
     }
 
     &__indicator {
@@ -38,25 +45,41 @@
         &__text {
             font-size: 0.88rem;
             font-weight: 500;
-            margin-bottom: 0;
+            margin-bottom: 0.25em;
+
+            @mixin atMedium {
+                margin-bottom: 0;
+            }
         }
 
         &__description {
             margin-bottom: 1.25em;
             
             &__current {
-                font-size: 1.329rem;
+                font-size: 1.1rem;
                 font-weight: 500;
+
+                @mixin atMedium {
+                    font-size: 1.329rem;
+                }
             }
 
         }
 
         &__bounds {
-            margin-top: 0.6em;
+            margin-top: 1em;
+
+            @mixin atMedium {
+                margin-top: 0.6em;
+            }
 
             &__min-max {
-                font-weight: 400;
-                font-size: 0.775rem;
+                font-weight: 400; 
+                font-size: 0.9rem;
+
+                @mixin atMedium {
+                    font-size: 1rem;
+                }
             }
         }
 
