--- a/app/assets/styles/modules/_step.css
+++ b/app/assets/styles/modules/_step.css
@@ -13,7 +13,7 @@
 
     &__count {
         font-size: 3.24rem;
-        background: url('/assets/images/leaf-2.png') center center no-repeat;
+        background: url('/assets/images/leaf.png') center center no-repeat;
         width: 128px;
         height: 118px;
         line-height: 118px;
